# SkoreFlow

./: .code-workspace  .eslintignore  .gitignore  .markdownlintignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  LICENSE  LICENSE.md  README.md  SkoreFlow.code-workspace  cspell.json  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  prettier.config.cjs  prettier.config.mjs  vitest.base.ts
.cspell/: custom-dictionary.txt
assets/: README.md  Readme.md
assets/vsc/: icons.md
assets/vscode/: icons.md
backend/: .air.toml  .env.render  .env.sample  .gitignore  Makefile  README.md  go.mod  go.sum  package.json
backend/api/: bootstrap.go  routes.go  server.go
backend/assets/: Readme.md
backend/auth/: token.go
backend/demo/: Readme.md
backend/micro-service/: .gitignore  Readme.md  pyproject.toml  requirements.txt
backend/micro-service/thumbnail-service/: app.py
backend/micro-service/thumbnail-service/test/: test.py
backend/middlewares/: auth.go  rateLimiting.go
backend/shared/: defaultAvatars.go  defaultComposer.go  userRole.go
backend/test/: Readme.md  (+1 more)
backend/test-mode/: Readme.md
docs/: .markdownlint.json  Home.md  doc.md  index.html  index.md
frontend/: .env  .env.dev  .env.development  .env.render  .env.test  .env.vm.dev  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.js  vitest.config.ts  vitest.setup.ts
microservice/: Readme.md
shared/: Readme.md
testauto/: Readme.md  readme.md  todelete.md
thumbnail-service/: app.py  requirements.txt
(+302 files in other folders)
