[project]
name = "micro-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ckl67",email = "christian.klugesherz@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=12.2.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
